<resources>
    <string name="app_name">Getting Location Updates</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="altitude_label">Altitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="estimated_accuracy_label">Estimated Location Accuracy</string>
    <string name="location_label">GPS Location</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="check_favorite_locations">Check Favorite Locations</string>
    <string name="find_on_map">Find On Map</string>
    <string name="favorite_location">Favorite Location</string>
    <string name="title_home">Home</string>
    <string name="location_dashboard">Location Dashboard</string>
    <string name="location_map">Map</string>
</resources>